<resources>
    <string name="login_activity_path">cn.qihang.doctor.ui.LoginActivity</string>
    <string-array name="home_sections">
        <item>首页</item>
        <item>分类</item>
        <item>生活研究所</item>
        <item>购物车</item>
        <item>我的</item>
    </string-array>
    <string-array name="study_sections">
        <item>达人测评</item>
        <item>专题内容</item>
        <item>晒单</item>
    </string-array>
    <string-array name="study_search_sections">
        <item>全部</item>
        <item>达人测评</item>
        <item>专题内容</item>
        <item>晒单</item>
    </string-array>
    <string-array name="my_comment_sections">
        <item>达人测评</item>
        <item>专题内容</item>
        <item>商品评价</item>
    </string-array>
    <string-array name="my_collection_sections">
        <item>达人测评</item>
        <item>专题内容</item>
    </string-array>
    <string-array name="my_message_center">
        <item>资讯</item>
        <item>交易物流</item>
        <item>系统消息</item>
    </string-array>
    <string name="app_name">方寸间</string>
    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
    <string name="retrun">返回</string>
    <string name="is_default">默认</string>
    <string name="is_sure">确定</string>
    <string name="album_view">选择图片</string>
    <string name="image_view">单击选择</string>
    <string name="add">确定</string>
    <string name="selected">已选</string>
    <string name="limit_exceeded">最多能选 %d 张</string>
    <string name="iconfont_wechat">&#xe612;</string>
    <string name="iconfont_weibo">&#xe613;</string>
    <string name="iconfont_qq">&#xe615;</string>
    <string name="iconfont_share"></string>
    <string name="iconfont_menu">&#xe603;</string>
    <string name="iconfont_book">&#xe601;</string>
    <string name="iconfont_setting">&#xe625;</string>
    <string name="iconfont_message">&#xe608;</string>
    <string name="iconfont_comment">&#xe621;</string>
    <string name="iconfont_nocomment">&#xe622;</string>
    <string name="iconfont_goodscollect">&#xe623;</string>
    <string name="iconfont_goodsnocollect">&#xe60b;</string>
    <string name="iconfont_right">&#xe622;</string>
    <string name="iconfont_headset">&#xe61d;</string>
    <string name="iconfont_search">&#xe604;</string>
    <string name="network_error_info">网络连接不可用，请稍后重试</string>
    <string name="againtologout">再按一次退出</string>
    <string name="phonehint">请输入手机号</string>
    <string name="codehint">请输入验证码</string>
    <string name="getcode">获取验证码</string>
    <string name="login">登录</string>
    <string name="again">再次获取</string>
    <string name="furniture_popular_science">家具小科普</string>
    <string name="online_customer_service">在线客服</string>
    <string name="online_time">9:00-21:00</string>
    <string name="feedback">意见反馈</string>
    <string name="about_us">关于我们</string>
    <string name="login_immediately">立即登录</string>
    <string name="please_login">请登陆</string>
    <string name="recommendation_courtesy">邀请有礼</string>
    <string name="gift_info">获好友首单金额10%的现金奖励+15元红包</string>
    <string name="collection_of_articles">收藏的文章</string>
    <string name="thematic_content">专题内容</string>
    <string name="evaluation_on_talent">达人测评</string>
    <string name="product_evaluation">商品评论</string>
    <string name="save">保存</string>
    <string name="head_portrait">头像</string>
    <string name="nickname">昵称</string>
    <string name="gender">性别</string>
    <string name="phone">电话</string>
    <string name="email">邮箱</string>
    <string name="birthday">生日</string>
    <string name="address_management">地址管理</string>
    <string name="chang_password">修改密码</string>
    <string name="clear_cache">清理缓存</string>
    <string name="score">给方寸间评分</string>
    <string name="exit_current_account">退出当前账户</string>
    <string name="female">女</string>
    <string name="nickname_value">Echo去穿袜子</string>
    <string name="phone_value">138746451</string>
    <string name="email_value">72788803588@136.com</string>
    <string name="birthday_value">1990.02.16</string>
    <string name="cache_value">1M</string>
    <string name="address_information">地址信息</string>
    <string name="name_value">蛋蛋</string>
    <string name="address_book_import">通讯录导入</string>
    <string name="large_address">浙江省 杭州市 西湖区</string>
    <string name="small_address">西溪创意产业园C-B 西溪创意产业园C-B</string>
    <string name="set_default_address">设置默认地址</string>
    <string name="delete_the_receiving_address">确定删除收货地址吗？</string>
    <string name="make_sure_to_save_the_address">填写的信息还没有保存，确定现在返回吗？</string>
    <string name="delete">删除</string>
    <string name="the_consignee">收货人</string>
    <string name="mobile_phone_number">手机号码</string>
    <string name="in_the_area">所在地区</string>
    <string name="detailed_address">详细地址：如道路，门牌号，小区，楼栋号，单元室等</string>
    <string name="delete_shipping_address">删除收货地址</string>
    <string name="edit_shipping_address">编辑收货地址</string>
    <string name="add_shipping_address">添加收货地址</string>
    <string name="open_address_book_permissions">请打开通讯录权限！</string>
    <string name="my_assets">我的资产</string>
    <string name="my_comments">我的评论</string>
    <string name="my_order">我的订单</string>
    <string name="collage">收藏的文章</string>
    <string name="wish_list">心愿单</string>
    <string name="wish_manager">管理</string>
    <string name="wish_finish">完成</string>
    <string name="for_the_payment">待付款</string>
    <string name="send_the_goods">待发货</string>
    <string name="for_the_goods">待收货</string>
    <string name="refund">退款/售后</string>
    <string name="view_vip_membership_benefits">查看VIP会员权益</string>
    <string name="available_integral">可用积分</string>
    <string name="comments_time">2019年01月10日 17:18</string>
    <string name="nike_name_type">仅支持数字、英文、中文</string>
    <string name="nike_name_not_null">昵称不能为空</string>
    <string name="nike_name_not_right">昵称格式错误，请重新输入</string>
    <string name="confirm">确定</string>
    <string name="hintNikeName">设置个性昵称（2-15个字符）</string>
    <string name="access_your_photos">“方寸间”想访问您的照片</string>
    <string name="get_your_photos">用于获取使用您的照片</string>
    <string name="not_allow">不允许</string>
    <string name="good">好</string>
    <string name="please_input_username">请填写收货人姓名哦~</string>
    <string name="please_input_mobile">请填写手机号码哦~</string>
    <string name="please_input_correct_mobile">请填写正确的手机号码哦~</string>
    <string name="please_input_big_address">请填写省市区哦~</string>
    <string name="please_input_detailed_address">请填写详细地址哦~</string>
    <string name="confirm_pay">确认支付</string>
    <string name="total">总计:  </string>
    <string name="money_value">¥0.00</string>
    <string name="pay_way">支付方式</string>
    <string name="actual_payment">实际付款</string>
    <string name="coupons">优惠券</string>
    <string name="freight">运费</string>
    <string name="rad_packet">红包</string>
    <string name="gross_merchandise_value">商品总金额</string>
    <string name="fill_in_the_note">填写备注</string>
    <string name="use_coupons">使用优惠卷</string>
    <string name="temporarily_no_use">暂无可用</string>
    <string name="pack_up_goods">收起另外2件商品</string>
    <string name="display_goods">显示另外2件商品</string>
    <string name="goods_title">吊灯吊灯吊灯</string>
    <string name="goods_details">黑色</string>
    <string name="confirmAddressSpace">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="credits">积分币</string>
    <string name="current_integral">当前积分</string>
    <string name="minute">分</string>
    <string name="integral_description">积分说明</string>
    <string name="claim_3_credits">确认收货 领取3积分</string>
    <string name="select_interests">精选权益</string>
    <string name="integral_subsidiary">积分明细</string>
    <string name="shopping_cart">购物车</string>
    <string name="pick_out_the_good_stuff">我有点饿，赶紧去挑选好货吧</string>
    <string name="go_home_select">去逛逛</string>
    <string name="go_home_login">登录并同步购物车商品</string>
    <string name="please_check_the_network">请查看网络</string>
    <string name="the_quantity_cannot_be_negative">数量不能为负数</string>
    <string name="shopping_cart_empty">您的购物车还是空的，赶紧行动吧</string>
    <string name="medium">中号</string>
    <string name="large_size">大号</string>
    <string name="pure_black">纯黑</string>
    <string name="black_gold_frame">黑金边框</string>
    <string name="specifications">规格：</string>
    <string name="color">颜色：</string>
    <string name="purchase_quantity">购买数量:</string>
    <string name="the_quantity_of_residual">剩余件数</string>
    <string name="piece">件</string>
    <string name="checked_good">选好了</string>
    <string name="floor_lamp">落地灯</string>
    <string name="delete_most_recent_search">确认删除最近搜索记录吗？</string>
    <string name="think_again">再想想</string>
    <string name="search">搜索</string>
    <string name="not_wish_list">还没来得及许小心愿吗？赶紧去挑选心仪好货吧~</string>
    <string name="delete_wish_list">还没有选择要删除的心愿哦~</string>
    <string name="confirm_delete">确认删除?</string>
    <string name="please_select_the_entry_to_delete">请选择要删除的条目 ！！！</string>
    <string name="payment_successful">付款成功</string>
    <string name="payment_failure">付款失败</string>
    <string name="please_pay_again">出错咯，请重新支付</string>
    <string name="wait_for_parcel">等待包裹奔向你的怀抱吧</string>
    <string name="goto_payment">去支付</string>
    <string name="view_more_items">查看更多商品</string>
    <string name="view_order_details">查看订单详情</string>
    <string name="failure_of_goods">失效商品</string>
    <string name="clear_failure_of_goods">清空失效商品</string>
    <string name="editor">编辑</string>
    <string name="complete">完成</string>
    <string name="settlement">结算</string>
    <string name="can_not_be_negative">不能为负数 ！！！</string>
    <string name="unselected_shopping_cart">您还没有选择商品哦</string>
    <string name="modify_the_success">修改成功</string>
    <string name="daily_tips">每日小贴士</string>
    <string name="inspiration">灵感</string>
    <string name="time_shopping">限时抢购</string>
    <string name="buy_right_now">马上抢</string>
    <string name="buy_remind">开抢提醒</string>
    <string name="buy_not_remind">取消提醒</string>
    <string name="buy_want">想拥有</string>
    <string name="guess_like">猜你喜欢</string>
    <string name="msg_center">消息中心</string>
    <string name="about_us_msg">曼容豪世·方寸间</string>
    <string name="about_us_privacy">隐私条款</string>
    <string name="about_us_privacy_explain">隐私条款说明</string>
    <string name="wish_bottom">心愿单到底了</string>
    <string name="empty_msg_info">啊哦，您还没有任何资讯消息呢～</string>
    <string name="empty_msg_trans">啊哦，您还没有任何物流消息呢~～</string>
    <string-array name="months">
        <item>JANUARY</item>
        <item>FEBRUARY</item>
        <item>MARCH</item>
        <item>APRIL</item>
        <item>MAY</item>
        <item>JUNE</item>
        <item>JULY</item>
        <item>AUGUST</item>
        <item>SEPTEMBER</item>
        <item>OCTOBER</item>
        <item>NOVEMBER</item>
        <item>DECEMBER</item>
    </string-array>
    <string name="text_kindly_reminder">温馨提示</string>
    <string name="text_splash_agreement_content_1">感谢您选择方寸间！我们非常重视您的个人信息和隐私保护，为了更好地保障您的个人权益，在您使用我们的产品前，请务必仔细阅读《方寸间用户协议》和《方寸间隐私政策》内的所有条款。</string>
    <string name="text_splash_agreement_content_2">重点关注以下内容：
            \n1.为了向您提供交易服务，我们仅收集使用必要的信息；
            \n2.我们会采取合理可行的措施保护您的个人信息；
            \n3.未经您的同意，我们不会向第三方提供您的信息；
            \n4.您可以访问、更正、删除您的个人信息，也可以申请注销账户。</string>
    <string name="text_splash_agreement_content_3">您需要同意《方寸间隐私政策》和《方寸间用户协议》,才能继续使用我们的产品和服务哦！</string>
    <string name="text_splash_agreement_disagree">不同意</string>
    <string name="text_splash_agreement_agree_continue">同意并继续</string>
    <string name="text_splash_agreement_exit_app">退出应用</string>
    <string name="text_splash_agreement_do_agree">去同意</string>
    <string name="registerUsernameHint">使用手机号码注册</string>
    <string name="registerVerifyCodeHint">请输入验证码</string>
    <string name="registerPasswordHint">请输入密码</string>
    <string name="register">注册</string>
</resources>