<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:binding="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_25dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="@dimen/_25dp"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/registerUsernameHint"
                android:paddingLeft="4dp"
                android:textColor="@color/color_3e"
                android:textColorHint="@color/color_6e6e6e"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@color/colorEF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_25dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="@dimen/_25dp"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/registerVerifyCodeHint"
                android:textColor="@color/color_3e"
                android:textColorHint="@color/color_6e6e6e"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@color/colorEF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_25dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="@dimen/_25dp"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/registerPasswordHint"
                android:textColor="@color/color_3e"
                android:textColorHint="@color/color_6e6e6e"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@color/colorEF" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginRight="@dimen/_20dp"
            android:textSize="16sp"
            android:text="@string/register"
            android:layout_marginTop="@dimen/_61dp"
            android:background="@drawable/radius_6_6caeee_637fe4"
            android:textColor="@color/white"
            android:gravity="center"/>
    </LinearLayout>
</layout>
